force-app/main/default/objects/Curb_Mobilization__c/Curb_Mobilization__c.object-meta.xml
<CustomObject>
    <label>Curb Mobilization</label>
    <nameField>
        <label>Curb Mobilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curb Mobilizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>