force-app/main/default/objects/Curb_Mobilization__c/fields/Concrete_Curb_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Curb_Evaluation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Concrete Curb Evaluation</label>
    <referenceTo>Concrete_Curb_Evaluation__c</referenceTo>
    <relationshipLabel>Curb Mobilizations</relationshipLabel>
    <relationshipName>Curb_Mobilizations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>