force-app/main/default/objects/Curb_Mobilization__c/fields/Curb_Special_Equipment_Needed_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Curb_Special_Equipment_Needed_Purpose__c</fullName>
    <label>Special Equipment Needed and Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>