force-app/main/default/objects/Curb_Mobilization__c/fields/Quantity_Curb_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Curb_Mobilization__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>